k8s/dev/rustfs.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rustfs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rustfs
  namespace: rustfs
  labels:
    app: rustfs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rustfs
  template:
    metadata:
      labels:
        app: rustfs
    spec:
      nodeSelector:
        kubernetes.io/hostname: "groot-server"
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
      - name: rustfs
        image: rustfs/rustfs:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 0
        ports:
        - name: s3
          containerPort: 9000
          hostPort: 9000
        - name: console
          containerPort: 9001
          hostPort: 9001
        volumeMounts:
        - name: rustfs-data
          mountPath: /data
        - name: rustfs-logs
          mountPath: /logs
        readinessProbe:
          httpGet:
            path: /health
            port: 9001
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 9001
          initialDelaySeconds: 20
          periodSeconds: 20
      volumes:
      - name: rustfs-data
        persistentVolumeClaim:
          claimName: rustfs-pvc
      - name: rustfs-logs
        hostPath:
          path: /mnt/pi-box-1tb/rustfs/logs
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: rustfs-service
  namespace: rustfs
  labels:
    app: rustfs
spec:
  selector:
    app: rustfs
  ports:
  - name: s3
    port: 9000
    targetPort: 9000
  - name: console
    port: 9001
    targetPort: 9001
  type: ClusterIP
