k8s/dev/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management
  namespace: library-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management
  template:
    metadata:
      labels:
        app: user-management
    spec:
      containers:
      - name: user-management
        image: hellisback/library-user-management:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "100Mi"
            cpu: "50m"
          limits:
            memory: "500Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /user-management/actuator/health
            port: 8080
          initialDelaySeconds: 200
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /user-management/actuator/health
            port: 8080
          initialDelaySeconds: 70
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
  namespace: library-dev
spec:
  selector: 
    app: user-management
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30003
  type: ClusterIP
